Fix index table alignment

--- a/src/scss/_tables.scss
+++ b/src/scss/_tables.scss
@@ -31,4 +31,8 @@
             margin-left: 10px;
         }
     }
+
+    td {
+        vertical-align: baseline;
+    }
 }
